<?xml version="1.0"?>
<package format="2">
  <name>pci</name>
  <version>0.0.0</version>
  <description>Interface between planner and controller</description>
  <maintainer email="mihir.dharmadhikari@gmail.com">Tung Dang</maintainer>
  <license>None</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>mavros_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

</package>
